# bas

./: .gitignore  CHANGE_LOG.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md
Source/ansic/: .cproject  .project  INSTALL  LICENSE  Makefile.in  NEWS  bas.1.in  bas.c  bas.h  bas.pot  config.h.in  configure  configure.in  de.po  fs.c  fs.h  global.c  main.c  program.c  programtypes.h  statement.c  str.c  test60.c  token.h  token.l  value.c  var.c
Tests/: test45  test57  test58  test59  test60  test61  test62  test63  test64
